# service-base-fastapi

./: .coverage  .coveragerc  .env.ci  .env.example  .env.test  .gitignore  .pylintrc  Dockerfile  Dockerfile.prod  LICENSE  README.md  compose-with-minio-redis.yaml  compose.yaml  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  schema.json  translate.md
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0431e40793bf_add_user_api_key.py  085693a0f8ac_init.py  0aa4e1912fc4_add_wallet.py  11061b015f0b_add.py  16b9f2150993_add_unique.py  185c97b296f5_init.py  21364ca38ab1_add_oauth_account.py  277a81e9f45b_add_asigned.py  29ee383b290c_add_deleted_at.py  2a5849709988_create_init_table.py  2d9ad1416927_init.py  3b154338a046_init.py  434696e40125_init.py  496dbf784b79_init.py  4a61d02faa89_remove.py  541c87094887_add_user_api_key.py  57170b11d50c_add_user_api_key.py  5b7b483ed307_init.py  5e82ae03cc5a_init.py  672090702e56_add_storage_key.py  6bbec2b0c852_add_api_key.py  7438b810b5fe_add_deleted_at.py  78b95c1aad7a_add_with_tax.py  78df6110a334_add_wallet_and_wallet_transaction.py  7ade37bc1072_init.py  7b1aaa04a92d_create_initial_tables.py  7d027468cc23_add_failed_attempts_column.py  8023d47a6c6f_init.py  8227dc14b060_init.py  86562ed4b8f4_change_image_key.py  8b73c10a234f_add_balance_after_transaction.py  a0007c7a5712_add_user_api_key.py  a53fe35d2cf8_add_org_assignment.py  a641cee557ec_change_init.py  ad4b913e75ba_init.py  c9549d7d61f8_remove_storage_key.py  d346b7d09ec6_init.py  d6ac0dc942f6_init.py  d99da5e18007_init.py  e46fc1a8e8fd_init.py  (+3 more)
app/: main.py  to_json.py
app/admin/: admin_auth.py  app.py
app/core/: auth.py  config.py  i18n.py  mailer.py  minio.py  response_type.py  s3.py  startup.py  user_manager.py  user_setup.py
app/db/: base.py  session.py
app/lib/: convert_id.py  error_code.py  get_file_extension.py  i18n.py  openapi_response_type.py  startup.py  stripe.py
app/locales/: en.json
app/models/: __init__.py  character.py  character_image.py  episode.py  oauth_account.py  organization.py  organization_address.py  organization_api_key.py  organization_wallet.py  organization_wallet_transaction.py  page.py  product.py  user.py  user_address.py  user_api_key.py  (+7 more)
docker/: init.sql
docs/: openapi.json
infra/: .terraform.lock.hcl  .terraform.tfstate.lock.info  main.tf  outputs.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
manga_translator/: __main__.py  args.py  config.py
scripts/: create_schema.py  generate_repositories_from_models.py  generate_repository_dependencies.py  generate_repository_fixtures.py
server/: args.py  instance.py  main.py  request_extraction.py
test/: test_translation.py
tests/: conftest.py
(+553 files in other folders)
