[project]
name = "manga-translator-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "accelerate>=1.6.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "aioredis>=2.0.1",
    "aioshutil>=1.5",
    "alembic>=1.15.2",
    "arabic-reshaper>=3.0.0",
    "asyncpg>=0.30.0",
    "backports-cached-property>=1.0.2",
    "boto3>=1.38.3",
    "colorama>=0.4.6",
    "cryptography>=44.0.2",
    "ctranslate2<=3.24.0",
    "cython>=3.0.12",
    "databases>=0.9.0",
    "deepl>=1.21.1",
    "editdistance>=0.8.1",
    "einops>=0.8.1",
    "fastapi>=0.115.12",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "freetype-py>=2.5.1",
    "groq>=0.23.1",
    "httpx==0.27.2",
    "huggingface-hub>=0.30.2",
    "imagehash>=4.3.2",
    "kornia>=0.8.0",
    "langcodes>=3.5.0",
    "langdetect>=1.0.9",
    "manga-ocr>=0.1.14",
    "marshmallow>=4.0.0",
    "mypy>=1.15.0",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "numpy==1.26.4",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.21.1",
    "open-clip-torch>=2.32.0",
    "openai==1.35.9",
    "opencv-python>=4.11.0.86",
    "paddleocr>=2.10.0",
    "paddlepaddle==2.5.2",
    "pandas>=2.2.3",
    "protobuf>=3.20.2",
    "psycopg2>=2.9.10",
    "py3langid==0.2.2",
    "pyclipper>=1.3.0.post6",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pydensecrf",
    "pyhyphen>=4.0.4",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "ruff>=0.11.7",
    "safetensors>=0.5.3",
    "scikit-image>=0.25.2",
    "sentencepiece>=0.2.0",
    "shapely>=2.1.0",
    "sqlalchemy>=2.0.40",
    "tensorboardx>=2.6.2.2",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torch-summary>=1.4.5",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "ulid-py>=1.1.0",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]

[tool.uv.sources]
pydensecrf = { url = "https://github.com/lucasb-eyer/pydensecrf/archive/refs/heads/master.zip" }

[tool.setuptools]
packages = ["app", "alembic", "tests", "scripts", "docker"]

[dependency-groups]
dev = [
    "faker>=37.1.0",
    "ipykernel==6.29.5",
    "pylint==3.3.0",
    "pytest==7.2.2",
    "pytest-asyncio==0.21.1",
    "pytest-dotenv>=0.5.2",
    "pytest-sugar==0.9.6",
    "pytest-xdist==3.3.1",
]


[tool.ruff]
line-length = 88  # または好きな長さ (PEP8は79, Blackは88)
target-version = "py310"  # プロジェクトに合わせて (例: Python 3.10なら "py310")
fix = true
unsafe-fixes = false

[tool.ruff.format]
quote-style = "double"  # 文字列はダブルクオート（好みで'single'でもOK）
docstring-code-format = true

[tool.mypy]
files = ["app", "alembic", "tests", "scripts"]
